--- a/StayLoveGuide/home/templates/home/home.html
+++ b/StayLoveGuide/home/templates/home/home.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" href="{% static 'css/home/home.css' %}">
 {% endblock %}
 
+{% include 'navbar.html' %}
+
 {% block content %}
+{% include 'navbar.html' %}
     <div class="home-container">
 
         <aside class="left-container">
