--- a/StayLoveGuide/static/css/home/home.css
+++ b/StayLoveGuide/static/css/home/home.css
@@ -25,8 +25,8 @@
 }
 
 .home-title {   
-    animation-name: jackInTheBox;
-    animation-duration: 2s;
+    animation-name: slideInLeft;
+    animation-duration: 1s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
     position: fixed;
