--- a/StayLoveGuide/static/templates/base.html
+++ b/StayLoveGuide/static/templates/base.html
@@ -20,7 +20,7 @@
 
 
         <body>
-            {% include 'navbar.html' %}
+            <!-- {% include 'navbar.html' %} -->
         
                 {% block content %}
                 {% endblock %}  
