--- a/StayLoveGuide/static/templates/navbar.html
+++ b/StayLoveGuide/static/templates/navbar.html
@@ -20,9 +20,9 @@
                       <i class="fas fa-bars"></i>
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">{% trans "菜单项1" %}</a></li>
-                      <li><a class="dropdown-item" href="#">{% trans "菜单项2" %}</a></li>
-                      <li><a class="dropdown-item" href="#">{% trans "菜单项3" %}</a></li>
+                      <li><a class="dropdown-item" href="#">{% trans "论坛" %}</a></li>
+                      <li><a class="dropdown-item" href="#">{% trans "聊天室" %}</a></li>
+                      <li><a class="dropdown-item" href="{% url 'login' %}">{% trans "二手市场" %}</a></li>
                   </ul>
               </li>
           </ul>
